--- a/config/locomotive.yml
+++ b/config/locomotive.yml
@@ -1,6 +1,6 @@
 ---
 mode: development
-port: 3020
-bundle: /Applications/Locomotive2.0.8/Bundles/rmagickRailsMar2007_i386.locobundle
+port: 3002
+bundle: /Applications/Locomotive2/Bundles/rmagickRailsMar2007_i386.locobundle
 runs_at_launch: 1
 identifier: Numenor
